# ELABORATO_LAB_DI_PROGRAMMAZIONE

./: CMakeLists.txt  Controller.cpp  Controller.h  Observer.cpp  Observer.h  ShoppingList.cpp  ShoppingList.h  Subject.cpp  Subject.h  User.cpp  User.h  View.cpp  View.h  main.cpp
test/: CMakeLists.txt  ShoppingListTest.cpp  UserTest.cpp  ViewTest.cpp  runAllTest.cpp
test/lib/googletest/docs/: advanced.md  gmock_cook_book.md
test/lib/googletest/googlemock/include/gmock/: gmock-actions.h  gmock-cardinalities.h  gmock-matchers.h  gmock-more-matchers.h  gmock-spec-builders.h  gmock.h
test/lib/googletest/googlemock/include/gmock/internal/: gmock-internal-utils.h
test/lib/googletest/googlemock/src/: gmock-internal-utils.cc  gmock-spec-builders.cc
test/lib/googletest/googlemock/test/: gmock-internal-utils_test.cc  gmock-spec-builders_test.cc
test/lib/googletest/googletest/include/gtest/: gtest-death-test.h  gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest.h
test/lib/googletest/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port.h  gtest-string.h  gtest-type-util.h
test/lib/googletest/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest.cc
